--- a/course.css
+++ b/course.css
@@ -96,7 +96,7 @@ padding: 8px 10%;
 
 
 .container{
-    background: #afefee;
+    background:url("one.jpg");
     padding:15px 9%;
     padding-bottom: 100px;
     margin-right: -20px;
