--- a/course.css
+++ b/course.css
@@ -105,7 +105,7 @@ padding: 8px 10%;
 .container .heading{
     text-align: center;
     padding-bottom: 15px;
-    color:#0c0c0c;
+    color:white;
     text-shadow: 0 5px 10px rgba(0,0,0,.2);
     font-size: 50px;
 }
