--- a/falcon.css
+++ b/falcon.css
@@ -26,7 +26,7 @@ padding: 8px 10%;
  .headername
 {
 font-family:'Mochiy Pop One', sans-serif;
-background-color: hsl(0, 0%, 0%);
+color: whitesmoke;
 font-size:x-large;
 
 }
