--- a/profile.css
+++ b/profile.css
@@ -8,7 +8,13 @@ justify-content: space-between;
 text-decoration: none;
 padding: 8px 10%;
  }
+ .headername
+{
+font-family:'Mochiy Pop One', sans-serif;
+color: whitesmoke;
+font-size:x-large;
 
+}
   @media screen and (max-width: 800px) {
     .left, .main, .right {
       width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
