--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
     display: inline-block;
     position: relative;
     width: 300px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
+    background-color: #e4a7e6;
+    border-radius: 9px;
+    box-shadow: 0 9px 9px 0 rgba(234, 241, 6, 0.512);
     padding: 20px;
     
     justify-content: center;
