--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     display: inline-block;
     position: relative;
     width: 300px;
-    background-color: #e4a7e6;
+    background-color: #dcd6d6;
     border-radius: 9px;
     box-shadow: 0 9px 9px 0 rgba(234, 241, 6, 0.512);
     padding: 20px;
